# IQmol

./: CMakeLists.txt  README
doc/: build_linux
replace/: camera.h  config.h  qglviewer.h
src/: CMakeLists.txt  IQmol.pro
src/Main/: Main.pro  globalarrays.mod  main.C
src/Old/: GLShape.h
