project(IQmol C CXX Fortran)
cmake_minimum_required(VERSION 2.8)
# set(CMAKE_AUTOMOC ON)

find_package(OpenGL REQUIRED)
find_package(Qt5 COMPONENTS Core Gui Network OpenGL Sql Xml
    REQUIRED)
set(Boost_USE_STATIC_LIBS TRUE)
find_package(Boost COMPONENTS iostreams serialization REQUIRED)
find_package(OpenSSL REQUIRED)
find_package(ZLIB REQUIRED)

set(CMAKE_MODULE_PATH ${IQmol_SOURCE_DIR}/cmake)
find_package(OpenBabel2 REQUIRED)
find_package(QGLViewer REQUIRED)
find_package(OpenMesh COMPONENTS Core Tools REQUIRED)
find_package(LibSsh2 REQUIRED)
unset(CMAKE_MODULE_PATH)

#include(${QT_USE_FILE})
add_definitions(${QT_DEFINITIONS} ${QGLVIEWER_DEFINITIONS})
include_directories(${OPENBABEL2_INCLUDE_DIR} ${OPENMESH_INCLUDE_DIR}
    ${QGLVIEWER_INCLUDE_DIR} ${LIBSSH2_INCLUDE_DIR} ${Boost_INCLUDE_DIRS})
string(REPLACE ";" " " COMP_BOOST_LIBS "${Boost_LIBRARIES}")
string(REPLACE ";" " " COMP_OPENMESH_LIBS "${OPENMESH_LIBRARIES}")

file(WRITE ./src/common.pri "QT     += xml opengl gui network\n")
file(APPEND ./src/common.pri "QT    += ${QT_DEFINITIONS}\n")
file(APPEND ./src/common.pri "greaterThan(QT_MAJOR_VERSION, 4): QT += widgets printsupport\n")
file(APPEND ./src/common.pri "QMAKE_CXXFLAGS += -O2 -g -ggdb\n")
file(APPEND ./src/common.pri "QMAKE_CXXFLAGS_WARN_ON = -Wall -Wno-unknown-pragmas -Wno-c++11-extensions -Wno-unused-function\n") 
file(APPEND ./src/common.pri "INCLUDEPATH += ${OPENBABEL2_INCLUDE_DIR} ${OPENMESH_INCLUDE_DIR} ${QGLVIEWER_INCLUDE_DIR} ${LIBSSH2_INCLUDE_DIR} ${Boost_INCLUDE_DIR}\n")
file(APPEND ./src/common.pri "LIBS += ${COMP_BOOST_LIBS} ")
# file(APPEND ./src/common.pri "-L")
file(APPEND ./src/common.pri "${OPENBABEL2_LIBRARIES} ${COMP_OPENMESH_LIBS} ${QGLVIEWER_LIBRARIES} ${LIBSSH2_LIBRARIES} ")
file(APPEND ./src/common.pri "\n")
file(APPEND ./src/common.pri "QMAKE_LFLAGS += '-Wl,-rpath,\\'\\$$ORIGIN/../lib\\'' \n")
file(APPEND ./src/common.pri "BUILD_DIR       = \$\$PWD/../build\n")
file(APPEND ./src/common.pri "INCLUDEPATH    += \$\$PWD  $$BUILD_DIR\n")
file(APPEND ./src/common.pri "lib {\n")
file(APPEND ./src/common.pri "  CONFIG      += staticlib\n")
file(APPEND ./src/common.pri "  TEMPLATE     = lib\n")
file(APPEND ./src/common.pri "  DESTDIR      = $$BUILD_DIR\n")
file(APPEND ./src/common.pri "  OBJECTS_DIR  = $$BUILD_DIR\n")
file(APPEND ./src/common.pri "  MOC_DIR      = $$BUILD_DIR\n")
file(APPEND ./src/common.pri "  UI_DIR       = $$BUILD_DIR\n")
file(APPEND ./src/common.pri "  INCLUDEPATH += $$PWD/$$LIB\n")
file(APPEND ./src/common.pri "}\n")
file(APPEND ./src/common.pri "app {\n")
file(APPEND ./src/common.pri "  CONFIG      -= staticlib\n")
file(APPEND ./src/common.pri "  TEMPLATE     = app\n")
file(APPEND ./src/common.pri "  DESTDIR      = $$BUILD_DIR/..\n")
file(APPEND ./src/common.pri "  OBJECTS_DIR  = $$BUILD_DIR\n")
file(APPEND ./src/common.pri "  MOC_DIR      = $$BUILD_DIR\n")
file(APPEND ./src/common.pri "  UI_DIR       = $$BUILD_DIR\n")
file(APPEND ./src/common.pri "}\n")
file(APPEND ./src/common.pri "main {\n")
file(APPEND ./src/common.pri "  CONFIG      -= staticlib\n")
file(APPEND ./src/common.pri "  TEMPLATE     = app\n")
file(APPEND ./src/common.pri "  DESTDIR      = $$BUILD_DIR/..\n")
file(APPEND ./src/common.pri "  OBJECTS_DIR  = $$BUILD_DIR\n")
file(APPEND ./src/common.pri "  MOC_DIR      = $$BUILD_DIR\n")
file(APPEND ./src/common.pri "  UI_DIR       = $$BUILD_DIR\n")
file(APPEND ./src/common.pri "  RESOURCES   += IQmol.qrc\n")
file(APPEND ./src/common.pri "  ICON         = resources/IQmol.icns\n")
file(APPEND ./src/common.pri "  QT          += network sql\n")
file(APPEND ./src/common.pri "  macx:QMAKE_INFO_PLIST = resources/Info.plist\n")
file(APPEND ./src/common.pri "}\n")

add_subdirectory(src)

include(InstallRequiredSystemLibraries)

set(CPACK_PACKAGE_NAME "IQmol")
set(CPACK_PACKAGE_VERSION_MAJOR "2")
set(CPACK_PACKAGE_VERSION_MINOR "3")
set(CPACK_PACKAGE_VERSION_PATCH "0")
set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "IQmol Molecular Viewer")
set(CPACK_PACKAGE_VENDOR "Andrew Gilbert")
set(CPACK_PACKAGE_CONTACT "Andrew Gilbert")
set(CPACK_PACKAGE_DESCRIPTION_FILE "${CMAKE_CURRENT_SOURCE_DIR}/README")
set(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_SOURCE_DIR}/LICENSE")
set(CPACK_PACKAGE_INSTALL_DIRECTORY "dist")
set(CPACK_INSTALLED_DIRECTORIES "share" ".")
set(CPACK_STRIP_FILES "bin/IQmol;bin/QUI")
set(CPACK_SOURCE_STRIP_FILES "")
set(CPACK_PACKAGE_EXECUTABLES "bin/IQmol;bin/QUI")
if(APPLE)
    set(CPACK_GENERATOR "Bundle")
    set(CPACK_BUNDLE_NAME "IQmol")
    set(CPACK_BUNDLE_ICON "${CMAKE_CURRENT_SOURCE_DIR}/src/resources/IQmol.icns")
    set(CPACK_BUNDLE_PLIST "${CMAKE_CURRENT_SOURCE_DIR}/src/Info.plist")
else(APPLE)
    set(CPACK_GENERATOR "DEB")
#    set(CPACK_DEBIAN_PACKAGE_DEPENDS
#        "libopenbabel4, libqglviewer-qt4-2, libssh2-1")
endif(APPLE)
include(CPack)

